js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-labeled-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
label
:
{
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
;
}
;
